// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > custom deletion, addition, and renaming of models 1`] = `
{
  "enabled": true,
  "enabledModels": [
    "llama",
    "claude-2",
    "gpt-4-0125-preview",
  ],
  "serverModelLists": [
    {
      "abilities": {},
      "displayName": "llama",
      "enabled": true,
      "id": "llama",
      "type": "chat",
    },
    {
      "abilities": {},
      "displayName": "claude-2",
      "enabled": true,
      "id": "claude-2",
      "type": "chat",
    },
    {
      "abilities": {
        "functionCall": true,
      },
      "contextWindowTokens": 128000,
      "description": "最新的 GPT-4 Turbo 模型具备视觉功能。现在，视觉请求可以使用 JSON 模式和函数调用。 GPT-4 Turbo 是一个增强版本，为多模态任务提供成本效益高的支持。它在准确性和效率之间找到平衡，适合需要进行实时交互的应用程序场景。",
      "displayName": "gpt-4-32k",
      "enabled": true,
      "id": "gpt-4-0125-preview",
      "pricing": {
        "units": [
          {
            "name": "textInput",
            "rate": 10,
            "strategy": "fixed",
            "unit": "millionTokens",
          },
          {
            "name": "textOutput",
            "rate": 30,
            "strategy": "fixed",
            "unit": "millionTokens",
          },
        ],
      },
      "providerId": "openai",
      "releasedAt": "2024-01-25",
      "source": "builtin",
      "type": "chat",
    },
  ],
}
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > should work correct with gpt-4 1`] = `
[
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 16384,
    "description": "GPT 3.5 Turbo，适用于各种文本生成和理解任务，Currently points to gpt-3.5-turbo-0125",
    "displayName": "GPT-3.5 Turbo 1106",
    "enabled": true,
    "id": "gpt-3.5-turbo-1106",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 1,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 2,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "releasedAt": "2023-11-06",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 16384,
    "description": "GPT 3.5 Turbo，适用于各种文本生成和理解任务，Currently points to gpt-3.5-turbo-0125",
    "displayName": "GPT-3.5 Turbo",
    "enabled": true,
    "id": "gpt-3.5-turbo",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 0.5,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 1.5,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 8192,
    "description": "GPT-4 提供了一个更大的上下文窗口，能够处理更长的文本输入，适用于需要广泛信息整合和数据分析的场景。",
    "displayName": "GPT-4",
    "enabled": true,
    "id": "gpt-4",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 30,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 60,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 32768,
    "description": "GPT-4 提供了一个更大的上下文窗口，能够处理更长的文本输入，适用于需要广泛信息整合和数据分析的场景。",
    "displayName": "GPT-4 32K",
    "enabled": true,
    "id": "gpt-4-32k",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 60,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 120,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {
      "functionCall": true,
    },
    "contextWindowTokens": 128000,
    "description": "最新的 GPT-4 Turbo 模型具备视觉功能。现在，视觉请求可以使用 JSON 模式和函数调用。 GPT-4 Turbo 是一个增强版本，为多模态任务提供成本效益高的支持。它在准确性和效率之间找到平衡，适合需要进行实时交互的应用程序场景。",
    "displayName": "GPT-4 Turbo Preview 1106",
    "enabled": true,
    "id": "gpt-4-1106-preview",
    "pricing": {
      "units": [
        {
          "name": "textInput",
          "rate": 10,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
        {
          "name": "textOutput",
          "rate": 30,
          "strategy": "fixed",
          "unit": "millionTokens",
        },
      ],
    },
    "providerId": "openai",
    "releasedAt": "2023-11-06",
    "source": "builtin",
    "type": "chat",
  },
  {
    "abilities": {},
    "displayName": "gpt-4-vision",
    "enabled": true,
    "id": "gpt-4-vision",
    "type": "chat",
  },
]
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENAI_MODEL_LIST > show the hidden model 1`] = `
{
  "abilities": {
    "functionCall": true,
  },
  "contextWindowTokens": 128000,
  "description": "最新的 GPT-4 Turbo 模型具备视觉功能。现在，视觉请求可以使用 JSON 模式和函数调用。 GPT-4 Turbo 是一个增强版本，为多模态任务提供成本效益高的支持。它在准确性和效率之间找到平衡，适合需要进行实时交互的应用程序场景。",
  "displayName": "GPT-4 Turbo Preview 1106",
  "enabled": true,
  "id": "gpt-4-1106-preview",
  "pricing": {
    "units": [
      {
        "name": "textInput",
        "rate": 10,
        "strategy": "fixed",
        "unit": "millionTokens",
      },
      {
        "name": "textOutput",
        "rate": 30,
        "strategy": "fixed",
        "unit": "millionTokens",
      },
    ],
  },
  "releasedAt": "2023-11-06",
  "type": "chat",
}
`;

exports[`configRouter > getGlobalConfig > Model Provider env > OPENROUTER_MODEL_LIST > custom deletion, addition, and renaming of models 1`] = `
{
  "enabled": false,
  "enabledModels": [
    "meta-llama/llama-3.1-8b-instruct:free",
    "google/gemma-2-9b-it:free",
  ],
  "serverModelLists": [
    {
      "abilities": {},
      "contextWindowTokens": 131072,
      "description": "LLaMA 3.1 提供多语言支持，是业界领先的生成模型之一。",
      "displayName": "Llama 3.1 8B (Free)",
      "enabled": true,
      "id": "meta-llama/llama-3.1-8b-instruct:free",
      "providerId": "openrouter",
      "source": "builtin",
      "type": "chat",
    },
    {
      "abilities": {},
      "contextWindowTokens": 8192,
      "description": "Gemma 2 是Google轻量化的开源文本模型系列。",
      "displayName": "Gemma 2 9B (Free)",
      "enabled": true,
      "id": "google/gemma-2-9b-it:free",
      "providerId": "openrouter",
      "source": "builtin",
      "type": "chat",
    },
  ],
}
`;
